<resources>
    <string name="app_name">Close the Breach</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="button_play">Jouer</string>
    <string name="button_option">Options</string>
    <string name="button_quit">Quitter</string>

    <string name="button_new">Nouvelle partie</string>
    <string name="button_load">Charger partie</string>

    <string name="quit_alert_dialog_title">Quitter</string>
    <string name="quit_alert_dialog_message">Voulez vous vraiment quitter</string>

    <string name="team_button">Commencer</string>
    <string name="team_title">Choisissez vos personnages</string>
    <string name="team_character_number">Personnage</string>

    <string name="hero_1">Allisa</string>
    <string name="hero_2">Arjhan</string>
    <string name="hero_3">Bruenor</string>
    <string name="hero_4">Catti-Brie</string>
    <string name="hero_5">Drizzt</string>
    <string name="hero_6">Heskan</string>
    <string name="hero_7">Immeril</string>
    <string name="hero_8">Jarlaxle</string>
    <string name="hero_9">Kat</string>
    <string name="hero_10">Keyleth</string>
    <string name="hero_11">Quinn</string>
    <string name="hero_12">Regis</string>
    <string name="hero_13">Tarak</string>
    <string name="hero_14">Thorgrim</string>
    <string name="hero_15">Vistra</string>
    <string name="hero_16">Wulfgar</string>
    <string name="hero_17">Artemis</string>
    <string name="hero_18">Athrogate</string>

    <string name="job_1">Ranger humaine</string>
    <string name="job_2">Guerrier drakéïde</string>
    <string name="job_3">Assassin humain</string>
    <string name="job_4">Guerroyeur nain</string>
    <string name="job_5">Guerrier nain</string>
    <string name="job_6">Archère humaine</string>
    <string name="job_7">Rôdeur drow</string>
    <string name="job_8">Magicien drakéïde</string>
    <string name="job_9">Magicien eladrain</string>
    <string name="job_10">Bretteur drow</string>
    <string name="job_11">Voleuse humaine</string>
    <string name="job_12">Paladin elfe</string>
    <string name="job_13">Clerc humain</string>
    <string name="job_14">Roublard halfelin</string>
    <string name="job_15">Roublard demi-orc</string>
    <string name="job_16">Clerc nain</string>
    <string name="job_17">Guerrière naine</string>
    <string name="job_18">Barbare humain</string>

    <string name="armor">CA</string>
    <string name="hp">PV</string>
    <string name="speed">Vitesse</string>
    <string name="respawn">PV Res</string>
    <string name="attack">Attaque</string>
    <string name="damage">Dommage</string>

    <string name="lifes">"Vies : "</string>
    <string name="base_life">3</string>
    <string name="available_xp">"XP : "</string>

    <string name="red">Red player wins</string>
    <string name="blue">Blue player wins</string>
    <string name="nobody">Nobody win</string>



    <string name="test_text_1">First slideview</string>
    <string name="test_text_2">Second slideview</string>
    <string name="test_button_text">Where am I ?</string>
    <string name="test_left_circle">"Left circle is at "</string>
    <string name="test_right_circle">"Right circle is at "</string>

</resources>
