<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/background">

    <Button
        android:id="@+id/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play"
        android:layout_above="@+id/button_option"
        android:layout_centerHorizontal="true"
        android:background="#00ffffff"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/button_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_option"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#00ffffff"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/button_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_quit"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_option"
        android:background="#00ffffff"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:layout_gravity="center" />

</RelativeLayout>
